cabal-version:      3.0
name:               bluefin-opaleye
version:            0.1.0.0
synopsis:
  bluefin support for high-level PostgreSQL operations via Opaleye.
description:
  See the README for an overview, or the documentation in 'Bluefin.Opaleye'.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Frederick Pringle
maintainer:         frederick.pringle@fpringle.com
copyright:          Copyright(c) Frederick Pringle 2025
homepage:           https://github.com/fpringle/bluefin-postgresql
build-type:         Simple
category:           Database
extra-doc-files:    README.md
                    CHANGELOG.md

tested-with:
    GHC == 8.10.7
  , GHC == 9.0.2
  , GHC == 9.2.4
  , GHC == 9.2.8
  , GHC == 9.4.2
  , GHC == 9.4.5
  , GHC == 9.6.1
  , GHC == 9.6.7
  , GHC == 9.8.2
  , GHC == 9.10.2

common warnings
  ghc-options: -Wall -Wno-unused-do-bind -Wunused-packages

common deps
  build-depends:
    , base >= 4 && < 5
    , bluefin >= 0.0.11 && < 0.0.18
    , opaleye >= 0.9 && < 0.11
    , product-profunctors >= 0.9 && < 0.12
    , bluefin-postgresql >= 0.1 && < 0.2
    , postgresql-simple >= 0.7 && < 0.8
    , text >= 2.0 && < 2.2
    , containers >= 0.6 && < 0.8
    , pretty >= 1.1.1.0 && < 1.2

common extensions
  default-extensions:
    DataKinds
    FlexibleContexts
    GADTs
    LambdaCase
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:
      warnings
    , deps
    , extensions
  exposed-modules:
      Bluefin.Opaleye
      Bluefin.Opaleye.Effect
      Bluefin.Opaleye.Count
  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010
